--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 img {
+  min-width: 30px;
   cursor: pointer;
+  z-index: 23;
+}
+
+.pick, img:hover {
+  background-color: orange;
+  border-radius: 10px;
 }/*# sourceMappingURL=style.css.map */
