--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,6 @@
 body{
     height: 100vh;
-    background-image: url('../images/wwz2.jpeg');
+    background-image: url('./images/wwz2.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
