Added sidebar and class icons

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   height: 100vh;
-  background-image: url("./images/wwz2.jpeg");
+  background-image: linear-gradient(0deg, rgba(242, 172, 122, 0.7819502801) 10%, rgba(56, 56, 56, 0.7987570028) 89%), url("./images/wwz2.jpeg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -13,7 +13,7 @@ img {
   z-index: 23;
 }
 
-.pick, img:hover {
+.pick, tr img:hover {
   background-color: orange;
   border-radius: 10px;
 }
@@ -24,4 +24,18 @@ img {
 
 table, tbody, tr, th, td {
   background-color: rgba(0, 0, 0, 0) !important;
+}
+
+footer img:hover {
+  background-color: blue;
+}
+
+.offcanvas a {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.list-group-flush a:hover {
+  background-color: orange;
 }/*# sourceMappingURL=style.css.map */
