--- a/style.css
+++ b/style.css
@@ -1,19 +1,24 @@
 body {
   height: 100vh;
-  background-image: linear-gradient(0deg, rgba(242, 172, 122, 0.7819502801) 10%, rgba(56, 56, 56, 0.7987570028) 89%), url("./images/wwz2.jpeg");
+  background-image: url("./images/wwz2.jpeg");
   background-position: center;
+  background-position-y: 60%;
   background-repeat: no-repeat;
-  background-size: cover;
-  margin-bottom: 150px;
+  background-size: fill;
 }
 
-img {
+.container {
+  overflow-x: auto;
+}
+
+tr img {
   min-width: 30px;
   cursor: pointer;
   z-index: 23;
 }
 
-.pick, tr img:hover {
+.pick,
+tr img:hover {
   background-color: orange;
   border-radius: 10px;
 }
@@ -22,20 +27,26 @@ img {
   background: transparent;
 }
 
-table, tbody, tr, th, td {
+table,
+tbody,
+tr,
+th,
+td {
   background-color: rgba(0, 0, 0, 0) !important;
-}
-
-footer img:hover {
-  background-color: blue;
 }
 
 .offcanvas a {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  font-weight: bold;
-  font-size: 1.2em;
+  font-size: 1.4em;
+  color: #ffffff;
+  transition: transform 100ms ease-in-out;
 }
 
-.list-group-flush a:hover {
-  background-color: orange;
+.offcanvas a:hover,
+.offcanvas a:focus {
+  color: orange;
+}
+
+.offcanvas a:hover {
+  transform: scale(1.2);
 }/*# sourceMappingURL=style.css.map */
