--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ tr img:hover {
 
 .transparent {
   background: transparent;
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
 }
 
 table,
@@ -34,6 +36,8 @@ tr,
 th,
 td {
   background-color: rgba(0, 0, 0, 0) !important;
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
 }
 
 .offcanvas a {
