--- a/style.scss
+++ b/style.scss
@@ -53,3 +53,9 @@ td {
 .offcanvas a:hover {
     transform: scale(1.2);
 }
+.navbar-brand{
+    font-family: monospace;
+    font-style: italic;
+    font-weight: bold;
+    color: orange;
+}
