--- a/weapon_pages/style2.scss
+++ b/weapon_pages/style2.scss
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../images/smoke.jpeg');
+    background: #FF5733 url('../images/smoke.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
