--- a/weapon_pages/style3.css
+++ b/weapon_pages/style3.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/smoke.jpeg");
+  background: #FF5733 url("../images/smoke.jpeg");
   background-size: cover;
   overflow-y: scroll;
 }
