Fixed background, changed to attached

--- a/weapon_pages/style2.scss
+++ b/weapon_pages/style2.scss
@@ -2,6 +2,7 @@ body {
     background: #FF5733 url('../images/smoke.jpeg');
     background-position: center;
     background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
 }
 .offcanvas a {
