--- a/weapon_pages/style2.css
+++ b/weapon_pages/style2.css
@@ -1,7 +1,8 @@
 body {
-  background-image: url("../images/smoke.jpeg");
+  background: #FF5733 url("../images/smoke.jpeg");
   background-position: center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
 }
 
