--- a/weapon_pages/style3.scss
+++ b/weapon_pages/style3.scss
@@ -1,7 +1,7 @@
 body {
     background-image: url('../images/smoke.jpeg');
     background-size: cover;
-    overflow-y: scroll;
+    background-attachment: fixed;
 }
 
 .offcanvas a {
