Added fallback color to bg-image

--- a/weapon_pages/style2.scss
+++ b/weapon_pages/style2.scss
@@ -1,5 +1,5 @@
 body {
-    background: #FF5733 url('../images/smoke.jpeg');
+    background: #303030 url('../images/smoke.jpeg');
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
