Fixed #2, color to bg image

--- a/weapon_pages/style3.scss
+++ b/weapon_pages/style3.scss
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../images/smoke.jpeg');
+    background-image: #303030 url('../images/smoke.jpeg');
     background-size: cover;
     background-attachment: fixed;
 }
