--- a/style.scss
+++ b/style.scss
@@ -11,7 +11,7 @@ body.rank{
     height: 100vh;
     background-image: url('../images/wallpaper2.jpg');
     background-position: center;
-    background-position-y: 55%;
+    background-position-y: 50%;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -71,4 +71,16 @@ td {
     font-style: italic;
     font-weight: bold;
     color: orange;
+}
+.leaderboard{
+    height: 90%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
+.leader-table{
+    width: 600px;
+    backdrop-filter: invert(70%) !important;
+    border-radius: 10px;
 }
