--- a/style.css
+++ b/style.css
@@ -74,8 +74,14 @@ td {
   color: orange;
 }
 
+.leaderboard {
+  display: flex;
+  justify-content: center;
+}
+
 .leader-table {
-  width: 600px;
+  min-width: 300px;
+  width: 400px;
   -webkit-backdrop-filter: invert(70%) !important;
           backdrop-filter: invert(70%) !important;
   border-radius: 10px;
