--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-body{
+body {
     height: 100vh;
     background-image: url('images/wwz2.jpeg');
     background-position: center;
@@ -7,10 +7,11 @@ body{
     background-size: fill;
 }
 
-body.rank{
+body.rank {
     height: 100vh;
     background-image: url('images/wallpaper2.jpg');
     background-position: center;
+    background-attachment: fixed;
     background-position-y: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -66,19 +67,24 @@ td {
 .offcanvas a:hover {
     transform: scale(1.2);
 }
-.navbar-brand{
+
+.navbar-brand {
     font-family: monospace;
     font-style: italic;
     font-weight: bold;
     color: orange;
 }
-.leaderboard{
-    display: flex;
-    justify-content: center;
+
+.trans {
+    backdrop-filter: invert(65%);
+    background-color: transparent;
 }
-.leader-table{
-    min-width: 300px;
-    width: 400px;
-    backdrop-filter: invert(70%) !important;
-    border-radius: 10px;
+
+.mutate img {
+    width: 70px;
+    height: 70px;
+}
+
+.mutate-list {
+    width: 80%;
 }
