--- a/style.scss
+++ b/style.scss
@@ -15,6 +15,7 @@ body.rank {
     background-position-y: 50%;
     background-repeat: no-repeat;
     background-size: cover;
+    overscroll-behavior: none;
 }
 
 .container {
