--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body.rank {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  overscroll-behavior: none;
 }
 
 .container {
