--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
   background-size: fill;
 }
 
+.mutate {
+  overflow: hidden;
+}
+
 body.rank {
   height: 100vh;
   background-image: url("images/wallpaper2.jpg");
@@ -14,7 +18,7 @@ body.rank {
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
-  overscroll-behavior: none;
+  overflow: auto;
 }
 
 .container {
