Testing mobile behavior

--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,9 @@ body {
     background-repeat: no-repeat;
     background-size: fill;
 }
-
+.mutate{
+    overflow: hidden;
+}
 body.rank {
     background-image: url('images/wallpaper2.jpg');
     background-color: #303030;
@@ -14,6 +16,7 @@ body.rank {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: fill;
+    overflow: auto;
 }
 
 .container {
