Finalized, last touchup

--- a/style.scss
+++ b/style.scss
@@ -23,10 +23,10 @@ body {
     margin-top: 5rem;
     right: 50%;
     transform: translateX(50%);
-    width: 80%;
+    width: 90vw;
 }
 
-tr img {
+tr img {    
     min-width: 30px;
     width: 80px;
     cursor: pointer;
