--- a/style.css
+++ b/style.css
@@ -15,19 +15,19 @@ body {
   background-size: cover;
   position: fixed;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
 }
 
-.contaier {
-  overflow-x: scroll;
+.container {
+  overflow-x: auto;
 }
 
 .content {
   position: absolute;
   margin-top: 5rem;
-  right: 50%;
-  transform: translateX(50%);
-  width: 100vw;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
 }
 
 tr img {
