--- a/touchup.css
+++ b/touchup.css
@@ -2,14 +2,10 @@ body {
     background-color: #1e1e1e;
 }
 .table-img{
-    height: 400px;
+    min-height: 100px;
+    max-height: 400px;
     width: 100%;
 }
-.table-img-target{
-    width: 100%;
-    height: 400px;
-}
-
 .navbar-brand {
     font-family: monospace;
     font-style: italic;
