--- a/touchup.css
+++ b/touchup.css
@@ -46,3 +46,98 @@ a {
 .BOX4 {
     display: none;
 }
+
+.rotate-center {
+    animation: rotate-center 2.5s ease-in infinite;
+}
+
+@keyframes rotate-center {
+    0% {
+        transform: rotate(0);
+
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.rotate-center2 {
+    animation: rotate-center2 2s linear infinite;
+}
+
+@keyframes rotate-center2 {
+    0% {
+        transform: rotate(0);
+
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.heartbeat {
+    animation: heartbeat 1s ease-in infinite;
+}
+
+@keyframes heartbeat {
+    from {
+        transform: scale(1);
+        transform-origin: center center;
+        animation-timing-function: ease-out;
+    }
+
+    10% {
+        transform: scale(0.90);
+        animation-timing-function: ease-in;
+    }
+
+    17% {
+        transform: scale(1.1);
+        animation-timing-function: ease-out;
+    }
+
+    33% {
+        transform: scale(0.80);
+        animation-timing-function: ease-in;
+    }
+
+    45% {
+        transform: scale(1);
+        animation-timing-function: ease-out;
+    }
+}
+
+.shake {
+    animation: shake 1.5s infinite both;
+}
+
+@keyframes shake {
+
+    0%,
+    100% {
+        transform: translateX(0%);
+        transform-origin: 50% 50%;
+    }
+
+    15% {
+        transform: translateX(-10px) rotate(-6deg);
+    }
+
+    30% {
+        transform: translateX(7px) rotate(6deg);
+    }
+
+    45% {
+        transform: translateX(-7px) rotate(-3.6deg);
+    }
+
+    60% {
+        transform: translateX(4.5px) rotate(2.4deg);
+    }
+
+    75% {
+        transform: translateX(-3px) rotate(-1.2deg);
+    }
+}
