--- a/touchup.css
+++ b/touchup.css
@@ -109,35 +109,82 @@ a {
     }
 }
 
-.shake {
-    animation: shake 1.5s infinite both;
+.vibrate {
+    animation: vibrate-1 0.3s linear infinite both;
 }
 
-@keyframes shake {
-
-    0%,
-    100% {
-        transform: translateX(0%);
-        transform-origin: 50% 50%;
+@keyframes vibrate-1 {
+    0% {
+        -webkit-transform: translate(0);
+        transform: translate(0);
     }
 
-    15% {
-        transform: translateX(-10px) rotate(-6deg);
+    20% {
+        -webkit-transform: translate(-2px, 2px);
+        transform: translate(-2px, 2px);
     }
 
-    30% {
-        transform: translateX(7px) rotate(6deg);
-    }
-
-    45% {
-        transform: translateX(-7px) rotate(-3.6deg);
+    40% {
+        -webkit-transform: translate(-2px, -2px);
+        transform: translate(-2px, -2px);
     }
 
     60% {
-        transform: translateX(4.5px) rotate(2.4deg);
+        -webkit-transform: translate(2px, 2px);
+        transform: translate(2px, 2px);
     }
 
-    75% {
-        transform: translateX(-3px) rotate(-1.2deg);
+    80% {
+        -webkit-transform: translate(2px, -2px);
+        transform: translate(2px, -2px);
+    }
+
+    100% {
+        -webkit-transform: translate(0);
+        transform: translate(0);
+    }
+}
+
+.flick {
+    animation: flicker-1 2s linear infinite both;
+}
+
+@keyframes flicker-1 {
+
+    0%,
+    100% {
+        opacity: 1;
+    }
+
+    41.99% {
+        opacity: 1;
+    }
+
+    42% {
+        opacity: 0;
+    }
+
+    43% {
+        opacity: 0;
+    }
+
+    43.01% {
+        opacity: 1;
+    }
+
+    47.99% {
+        opacity: 1;
+    }
+
+    48% {
+        opacity: 0;
+    }
+
+    49% {
+        opacity: 0;
+    }
+
+    49.01% {
+        opacity: 1;
     }
 }
