Completed easy entry scripting

--- a/weapon_pages/style2.css
+++ b/weapon_pages/style2.css
@@ -33,4 +33,4 @@ body {
 .container .card {
   background: rgba(0, 0, 0, 0) !important;
   max-width: 250px;
-}/*# sourceMappingURL=style2.css.map */
+}
