--- a/touchup.css
+++ b/touchup.css
@@ -36,11 +36,11 @@ a {
 }
 
 .BOX0 {
-    display: block;
+    display: none;
 }
 
 .BOX3 {
-    display: none;
+    display: block;
 }
 
 .BOX4 {
@@ -115,76 +115,59 @@ a {
 
 @keyframes vibrate-1 {
     0% {
-        -webkit-transform: translate(0);
         transform: translate(0);
     }
 
     20% {
-        -webkit-transform: translate(-2px, 2px);
         transform: translate(-2px, 2px);
     }
 
     40% {
-        -webkit-transform: translate(-2px, -2px);
         transform: translate(-2px, -2px);
     }
 
     60% {
-        -webkit-transform: translate(2px, 2px);
         transform: translate(2px, 2px);
     }
 
     80% {
-        -webkit-transform: translate(2px, -2px);
         transform: translate(2px, -2px);
     }
 
     100% {
-        -webkit-transform: translate(0);
         transform: translate(0);
     }
 }
 
 .flick {
-    animation: flicker-1 2s linear infinite both;
+    animation: flicker-1 1.75s linear infinite;
 }
 
 @keyframes flicker-1 {
 
     0%,
     100% {
-        opacity: 1;
+        transform: translateX(0);
     }
 
-    41.99% {
-        opacity: 1;
+    10%,
+    30%,
+    50%,
+    70% {
+        transform: translateX(-5px);
     }
 
-    42% {
-        opacity: 0;
+    20%,
+    40%,
+    60% {
+        transform: translateX(5px);
     }
 
-    43% {
-        opacity: 0;
+    80% {
+        transform: translateX(2px);
     }
 
-    43.01% {
-        opacity: 1;
-    }
-
-    47.99% {
-        opacity: 1;
-    }
-
-    48% {
-        opacity: 0;
-    }
-
-    49% {
-        opacity: 0;
-    }
-
-    49.01% {
-        opacity: 1;
+    90% {
+        transform: translateX(-2px);
     }
 }
